--- a/rush.yaml
+++ b/rush.yaml
@@ -36747,7 +36747,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 1 each of "Deadly Business Card Exchange" and "Strong Z" from your Graveyard to your Spell & Trap Zone. This turn, you cannot attack with non-Machine Type monsters.
+    Set up to 1 each of "Business Card Barrage" and "Nutrient Zero" from your Graveyard to your Spell & Trap Zone. This turn, you cannot attack with non-Machine Type monsters.
   de:
   es:
   fr:
@@ -36813,7 +36813,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set up to 1 each of "Attack Salary Cut" and "Battle Demotion" from your Graveyard to your Spell & Trap Zone.
+    Set up to 1 each of "Salary Slash" and "Battle Demotion" from your Graveyard to your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -38193,7 +38193,7 @@ yugipedia_page_id: 816161
 ---
 konami_id: 16702
 name:
-  en: Deadly Business Card Exchange
+  en: Business Card Barrage
   de:
   es:
   fr:
@@ -38239,7 +38239,7 @@ series:
 - Worker Warrior
 images:
 - index: 1
-  image: DeadlyBusinessCardExchange-RDKP06-JP-R.png
+  image: BusinessCardBarrage-RDKP06-JP-R.png
 sets:
   ja:
   - set_number: RD/KP06-JP046
@@ -38255,7 +38255,7 @@ yugipedia_page_id: 821902
 ---
 konami_id: 16703
 name:
-  en: Strong Z
+  en: Nutrient Zero
   de:
   es:
   fr:
@@ -38299,7 +38299,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: StrongZ-RDGRD2-JP-C.png
+  image: NutrientZero-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP047
@@ -38323,7 +38323,7 @@ yugipedia_page_id: 821907
 ---
 konami_id: 16704
 name:
-  en: Just Meat
+  en: Best Bite
   de:
   es:
   fr:
@@ -38369,7 +38369,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: JustMeat-RDKP06-JP-C.png
+  image: BestBite-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP048
@@ -38385,7 +38385,7 @@ yugipedia_page_id: 814548
 ---
 konami_id: 16705
 name:
-  en: Burning Beast Quality
+  en: B・B・Q
   de:
   es:
   fr:
@@ -38431,7 +38431,7 @@ series:
 - Yakiniku
 images:
 - index: 1
-  image: BurningBeastQuality-RDKP06-JP-C.png
+  image: BBQ-RDKP06-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP049
@@ -39213,7 +39213,7 @@ yugipedia_page_id: 816168
 ---
 konami_id: 16718
 name:
-  en: Attack Salary Cut
+  en: Salary Slash
   de:
   es:
   fr:
@@ -39259,7 +39259,7 @@ series:
 - Worker Warrior
 images:
 - index: 1
-  image: AttackSalaryCut-RDSD02-JP-C.png
+  image: SalarySlash-RDSD02-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP062
@@ -44788,7 +44788,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of Machine Type monsters in your Graveyard] x 200 until the end of this turn, then you can place 1 "Attack Salary Cut" or "Battle Demotion" from your Graveyard on the bottom of the Deck, and if you do, you can draw 1 card.
+    This card gains ATK equal to [the number of Machine Type monsters in your Graveyard] x 200 until the end of this turn, then you can place 1 "Salary Slash" or "Battle Demotion" from your Graveyard on the bottom of the Deck, and if you do, you can draw 1 card.
   de:
   es:
   fr:
@@ -55957,7 +55957,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add up to 1 each of "Just Meat", "Burning Beast Quality", and "Wild Kitchen" from your Graveyard to your hand.
+    Add up to 1 each of "Best Bite", "B・B・Q", and "Wild Kitchen" from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -87023,3 +87023,230 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 923450
+---
+konami_id:
+name:
+  en: Level Blast
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: レベルブラスト
+  ja_romaji: Reberu Burasuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Each player has a face-up Level 7 or higher monster on their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Inflict damage to your opponent equal to [the Level of 1 face-up monster on your field] x 100. This turn, you can only attack with 1 monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: LevelBlast-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP010
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923519
+---
+konami_id:
+name:
+  en: Aitsu
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    He seems to be very unreliable, but he might have incredible potential.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    非常に頼りない姿をしているが、実はとてつもない潜在能力を隠し持っているらしい。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Normal
+attribute: FIRE
+level: 5
+atk: 100
+def: 100
+images:
+- index: 1
+  image: Aitsu-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP009
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923525
+---
+konami_id:
+name:
+  en: Fairy Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    This beautiful Dragon spirit harbors hidden strength.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    妖精の中では意外と強い、とてもきれいなドラゴンの妖精。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: WIND
+level: 4
+atk: 1100
+def: 1200
+images:
+- index: 1
+  image: FairyDragon-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP008
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923526
+---
+konami_id:
+name:
+  en: Digger Skipper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ディガー・スキッパー
+  ja_romaji: Digā Sukippā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A civil engineering machine that excels at excavation. It moves in a bouncing motion to plow the earth.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Normal
+attribute: EARTH
+level: 1
+atk: 0
+def: 1400
+images:
+- index: 1
+  image: DiggerSkipper-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP006
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923538
+---
+konami_id:
+name:
+  en: Princessleon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヒメレオン
+  ja_romaji: Himereon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A chameleon that loves cute things. If it finds one of its favorites, it puts it in its mouth and spends time with it until it gets tired.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Normal
+attribute: LIGHT
+level: 1
+atk: 100
+def: 600
+series:
+- Chameleon
+images:
+- index: 1
+  image: Princessleon-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP007
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923541
