--- a/rush.yaml
+++ b/rush.yaml
@@ -32437,7 +32437,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, it can attack all your opponent's monsters once each, also it inflicts piercing battle damage.
+    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, it can attack all your opponent's monsters once each, also it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
