--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5410,6 +5410,18 @@
   ko_rr: Saibeo Deuraegon
   zh-TW: 電子龍
   zh-CN: 电子龙
+- en: Nemurelia
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ネムレリア
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
 - en: Trap Hole
   de: Fallgrube
   es: Agujero Trampa
