--- a/data/cards/02356994.yaml
+++ b/data/cards/02356994.yaml
@@ -42,10 +42,10 @@ def: 1700
 images:
 - index: 1
   image: '  GreatLongNose-BE02-JP-C.jpg'
-  illustration: '  GreatLongNose-TF04-JP-VG.jpg'
+  illustration: '  GreatLongNose-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: GreatLongNose-DB2-EN-C-UE.png
-  illustration: GreatLongNose-TF04-EN-VG.jpg
+  illustration: GreatLongNose-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: LOD-EN068
