--- a/data/cards/39180960.yaml
+++ b/data/cards/39180960.yaml
@@ -48,10 +48,10 @@ def: 100
 images:
 - index: 1
   image: '  RigorousReaver-15AX-JP-C.png'
-  illustration: '   RigorousReaver-TF04-JP-VG.jpg'
+  illustration: '   RigorousReaver-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: RigorousReaver-BP03-EN-C-1E.png
-  illustration: RigorousReaver-TF04-EN-VG.png
+  illustration: RigorousReaver-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: CP06-EN001
