--- a/data/cards/39751093.yaml
+++ b/data/cards/39751093.yaml
@@ -42,10 +42,10 @@ def: 100
 images:
 - index: 1
   image: '  Otohime-BE02-JP-C.jpg'
-  illustration: '   Otohime-TF04-JP-VG.jpg'
+  illustration: '   Otohime-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: Otohime-BPW2-NA-C-1E.png
-  illustration: Otohime-TF04-EN-VG.jpg
+  illustration: Otohime-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: LOD-EN069
