--- a/data/cards/78636495.yaml
+++ b/data/cards/78636495.yaml
@@ -48,10 +48,10 @@ def: 400
 images:
 - index: 1
   image: '  SlateWarrior-15AX-JP-C.png'
-  illustration: '   SlateWarrior-TF04-JP-VG.png'
+  illustration: '   SlateWarrior-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: SlateWarrior-BP03-EN-R-1E.png
-  illustration: SlateWarrior-TF04-EN-VG.png
+  illustration: SlateWarrior-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: TP8-EN003
