--- a/data/cards/78534861.yaml
+++ b/data/cards/78534861.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 恐吓爪牙族型俱舍怒威族
 text:
   en: |-
-    During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kashtira" or "Scareclaw" card from your hand or GY. You can only use this effect of "Scareclaw Kashtira" once per turn. This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. The effects of any opponent's monster that battles your "Kashtira" or "Scareclaw" monster are negated until the end of the turn.
+    During the Main Phase (Quick Effect): You can Special Summon this card from your hand, and if you do, banish 1 "Kashtira" or "Scareclaw" card from your hand or GY. You can only use this effect of "Scareclaw Kashtira" once per turn. This card can attack while in face-up Defense Position. If it does, apply its DEF for damage calculation. The effects of any opponent's monster that was involved in a battle with your "Kashtira" or "Scareclaw" monster this turn, while this card was face-up on the field, are negated.
   de:
   es:
   fr:
