--- a/data/cards/67630339.yaml
+++ b/data/cards/67630339.yaml
@@ -39,7 +39,7 @@ series:
 - Fusion
 images:
 - index: 1
-  image: ConfusionChaff-CSOC-EN-C-1E.jpg
+  image: ConfusionChaff-DP08-EN-C-UE.png
 sets:
   en:
   - set_number: CSOC-EN064
