--- a/data/cards/yugipedia924250.yaml
+++ b/data/cards/yugipedia924250.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>識<rt>しぎ</rt></ruby><ruby>無<rt>む</rt></ruby><ruby>辺<rt>へん</rt></ruby><ruby>世<rt>せ</rt></ruby><ruby>壊<rt>かい</rt></ruby>
-  ja_romaji: Shigimuhensekai
+  ja: <ruby>識<rt>しき</rt></ruby><ruby>無<rt>む</rt></ruby><ruby>辺<rt>へん</rt></ruby><ruby>世<rt>せ</rt></ruby><ruby>壊<rt>かい</rt></ruby>
+  ja_romaji: Shikimuhensekai
   ko:
   ko_rr:
   zh-TW:
