--- a/rush.yaml
+++ b/rush.yaml
@@ -85557,6 +85557,237 @@ sets:
     - Ultra Rare
 yugipedia_page_id: 921196
 ---
+konami_id: 18649
+name:
+  en: Digger Skipper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ディガー・スキッパー
+  ja_romaji: Digā Sukippā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A civil engineering machine that excels at excavation. It moves in a bouncing motion to plow the earth.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    掘削能力に長けた土木マシン。跳ねるように移動して大地を鋤き込む。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Normal
+attribute: EARTH
+level: 1
+atk: 0
+def: 1400
+images:
+- index: 1
+  image: DiggerSkipper-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP006
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923538
+---
+konami_id: 18650
+name:
+  en: Princessleon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヒメレオン
+  ja_romaji: Himereon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A chameleon that loves cute things. If it finds one of its favorites, it puts it in its mouth and spends time with it until it gets tired.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    可愛いものが大好きなカメレオン。お気に入りを見つけては飽きるまで口の中に入れて一緒に過ごす。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Normal
+attribute: LIGHT
+level: 1
+atk: 100
+def: 600
+series:
+- Chameleon
+images:
+- index: 1
+  image: Princessleon-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP007
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923541
+---
+konami_id: 18651
+name:
+  en: Fairy Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    This beautiful Dragon spirit harbors hidden strength.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    妖精の中では意外と強い、とてもきれいなドラゴンの妖精。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: WIND
+level: 4
+atk: 1100
+def: 1200
+images:
+- index: 1
+  image: FairyDragon-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP008
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923526
+---
+konami_id: 18652
+name:
+  en: Aitsu
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    He seems to be very unreliable, but he might have incredible potential.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    非常に頼りない姿をしているが、実はとてつもない潜在能力を隠し持っているらしい。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Normal
+attribute: FIRE
+level: 5
+atk: 100
+def: 100
+images:
+- index: 1
+  image: Aitsu-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP009
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923525
+---
+konami_id: 18653
+name:
+  en: Level Blast
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: レベルブラスト
+  ja_romaji: Reberu Burasuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Each player has a face-up Level 7 or higher monster on their field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    お互いのフィールドにそれぞれ表側表示モンスター（レベル７以上）がいる場合に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Inflict damage to your opponent equal to [the Level of 1 face-up monster on your field] x 100. This turn, you can only attack with 1 monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター１体を選び、［選んだモンスターのレベル］×１００ダメージを相手に与える。このターン、自分はモンスター１体でしか攻撃できない。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: LevelBlast-RDB224-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B224-JP010
+    set_name: Battle Pack 2022 Vol.4
+    rarities:
+    - Common
+yugipedia_page_id: 923519
+---
 konami_id:
 name:
   en: Hacking Dragon
@@ -87054,233 +87285,6 @@ yugipedia_page_id: 923450
 ---
 konami_id:
 name:
-  en: Level Blast
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: レベルブラスト
-  ja_romaji: Reberu Burasuto
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Each player has a face-up Level 7 or higher monster on their field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Inflict damage to your opponent equal to [the Level of 1 face-up monster on your field] x 100. This turn, you can only attack with 1 monster.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Spell
-property: Normal
-images:
-- index: 1
-  image: LevelBlast-RDB224-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B224-JP010
-    set_name: Battle Pack 2022 Vol.4
-    rarities:
-    - Common
-yugipedia_page_id: 923519
----
-konami_id:
-name:
-  en: Aitsu
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ja_romaji:
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    He seems to be very unreliable, but he might have incredible potential.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    非常に頼りない姿をしているが、実はとてつもない潜在能力を隠し持っているらしい。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Fairy / Normal
-attribute: FIRE
-level: 5
-atk: 100
-def: 100
-images:
-- index: 1
-  image: Aitsu-RDB224-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B224-JP009
-    set_name: Battle Pack 2022 Vol.4
-    rarities:
-    - Common
-yugipedia_page_id: 923525
----
-konami_id:
-name:
-  en: Fairy Dragon
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ja_romaji:
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    This beautiful Dragon spirit harbors hidden strength.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    妖精の中では意外と強い、とてもきれいなドラゴンの妖精。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Dragon / Normal
-attribute: WIND
-level: 4
-atk: 1100
-def: 1200
-images:
-- index: 1
-  image: FairyDragon-RDB224-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B224-JP008
-    set_name: Battle Pack 2022 Vol.4
-    rarities:
-    - Common
-yugipedia_page_id: 923526
----
-konami_id:
-name:
-  en: Digger Skipper
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ディガー・スキッパー
-  ja_romaji: Digā Sukippā
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A civil engineering machine that excels at excavation. It moves in a bouncing motion to plow the earth.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Machine / Normal
-attribute: EARTH
-level: 1
-atk: 0
-def: 1400
-images:
-- index: 1
-  image: DiggerSkipper-RDB224-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B224-JP006
-    set_name: Battle Pack 2022 Vol.4
-    rarities:
-    - Common
-yugipedia_page_id: 923538
----
-konami_id:
-name:
-  en: Princessleon
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ヒメレオン
-  ja_romaji: Himereon
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    A chameleon that loves cute things. If it finds one of its favorites, it puts it in its mouth and spends time with it until it gets tired.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Reptile / Normal
-attribute: LIGHT
-level: 1
-atk: 100
-def: 600
-series:
-- Chameleon
-images:
-- index: 1
-  image: Princessleon-RDB224-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B224-JP007
-    set_name: Battle Pack 2022 Vol.4
-    rarities:
-    - Common
-yugipedia_page_id: 923541
----
-konami_id:
-name:
   en: Ether Escape
   de:
   es:
@@ -87489,14 +87493,14 @@ yugipedia_page_id: 928193
 ---
 konami_id:
 name:
-  en: Star Trio
+  en: Star Tri-Leo
   de:
   es:
   fr:
   it:
   pt:
   ja: スター・トライオ
-  ja_romaji:
+  ja_romaji: Sutā Toraio
   ko:
   ko_rr:
   zh-TW:
