--- a/data/cards/yugipedia928399.yaml
+++ b/data/cards/yugipedia928399.yaml
@@ -43,6 +43,7 @@ sets:
   - set_number: CYAC-JP037
     set_name: Cyberstorm Access
     rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
