--- a/data/rush/15150.yaml
+++ b/data/rush/15150.yaml
@@ -68,6 +68,7 @@ images:
   image: SevensRoadMagician-RDMRP1-JP-R.png
 - index: 5
   image: SevensRoadMagician-RDORP1-JP-ORR.png
+  illustration: SevensRoadMagician-OW-2.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
