--- a/data/rush/18360.yaml
+++ b/data/rush/18360.yaml
@@ -64,6 +64,7 @@ images:
   image: ExcutieLumiere-RDORP1-JP-SR.png
 - index: 2
   image: ExcutieLumiere-RDJF23-JP-OP.png
+  illustration: ExcutieLumiere-OW.png
 sets:
   ja:
   - set_number: RD/ORP1-JP031
