--- a/rush.yaml
+++ b/rush.yaml
@@ -42997,7 +42997,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster, and you have a LIGHT Attribute Normal Monster with 500 DEF in your Graveyard.
+    When your opponent Normal or Special Summons a monster while you have a LIGHT Attribute Normal Monster with 500 DEF in your Graveyard.
   de:
   es:
   fr:
@@ -87667,3 +87667,58 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 928405
+---
+konami_id:
+name:
+  en: Cyber Coatl
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバー・コアトル
+  ja_romaji: Saibā Koatoru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have no other monsters on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 3 cards of your Deck. You can Special Summon 1 excavated Level 5 Machine Type monster face-up to your field. Place the remaining cards on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: LIGHT
+level: 3
+atk: 500
+def: 1200
+images:
+- index: 1
+  image: CyberCoatl-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP018
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928506
