--- a/rush.yaml
+++ b/rush.yaml
@@ -85249,7 +85249,7 @@ atk: 300
 def: 1300
 images:
 - index: 1
-  image: StarTrio-RDRLP2-JP-OP.png
+  image: StarTriLeo-RDRLP2-JP-OP.png
 sets:
   ja:
   - set_number: RD/RLP2-JP001
@@ -87726,3 +87726,47 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 928506
+---
+konami_id:
+name:
+  en: Transamu Raiker
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・ライカー
+  ja_romaji: Toranzamu Raikā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en:
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 4
+atk: 1000
+def: 1000
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuRaiker-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP024
+    set_name: Saikyō Jump March 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 928559
