--- a/data/cards/19733961.yaml
+++ b/data/cards/19733961.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     自分フィールド上の「電池メン－単二型」が全て攻撃表示だった場合、「電池メン－単二型」１体につき自分フィールド上の全ての機械族モンスターの攻撃力は５００ポイントアップする。自分フィールド上の「電池メン－単二型」が全て守備表示だった場合、「電池メン－単二型」１体につき自分フィールド上の全ての機械族モンスターの守備力は５００ポイントアップする。
   ko: |-
-    자신 필드상의 「전지 맨-C」이 모두 공격 표시였던 경우, 「전지 맨-C」1체에 대해 자신 필드상의 모든 기계족몬스터의 공격력은 500포인트 올라간다. 자신 필드상의 「전지 맨-C」이 모두 수비 표시였던 경우, 「전지 맨-C」1체에 대해 자신 필드상의 모든 기계족몬스터의 수비력은 500포인트 올라간다.
+    자신 필드 위의 "전지맨-C"가 전부 공격 표시였을 경우, "전지맨-C" 1장당 자신 필드 위의 모든 기계족 몬스터의 공격력은 500 포인트 올린다. 자신 필드 위의 "전지맨-C"가 전부 수비 표시였을 경우, "전지맨-C" 1장당 자신 필드 위의 모든 기계족 몬스터의 수비력은 500 포인트 올린다.
   zh-TW:
   zh-CN: |-
     自己场上的「电池人-单二型」全部是攻击表示的场合，「电池人-单二型」每有1只自己场上的全部机械族怪兽的攻击力上升500。自己场上的「电池人-单二型」全部是守备表示的场合，「电池人-单二型」每有1只自己场上的全部机械族怪兽的守备力上升500。
