--- a/rush.yaml
+++ b/rush.yaml
@@ -85380,7 +85380,7 @@ series:
 - High Tech Dragon
 images:
 - index: 1
-  image: HackingDragon-RDSJMP-JP-OP.png
+  image: HackingDragon-RDSJMP-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP023
@@ -87770,3 +87770,141 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 928559
+---
+konami_id:
+name:
+  en: Melel the Beautiful Flame Spirit of the Lamp
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ランプの<ruby>炎<rt>えん</rt></ruby><ruby>麗<rt>れい</rt></ruby>メルエル
+  ja_romaji: Ranpu no Enrei Merueru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card and show it. Then, if that card is a Pyro Type monster, you can Special Summon 1 Level 8 or lower Pyro Type monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 2800
+def: 1800
+materials:
+  en: |-
+    "Methyl the Flame Jinn of the Lamp" + "Ethyl the Flame Jinn of the Lamp"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Chemistry
+images:
+- index: 1
+  image: MeleltheBeautifulFlameSpiritoftheLamp-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP031
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928570
+---
+konami_id:
+name:
+  en: Alchemicalize Salamandra
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アルケミカライズ・サラマンドラ
+  ja_romaji: Arukemikaraizu Saramandora
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During your Main Phase this card was Special Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all Spell/Trap Cards on the field. Then, you can make all face-up monsters on your opponent's field lose ATK equal to [the number of Spell Cards destroyed by this effect] x 1000 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 3000
+def: 2000
+materials:
+  en: |-
+    "Chemicalize Salamander" + "Super Assistant Achi"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Chemistry
+images:
+- index: 1
+  image: AlchemicalizeSalamandra-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP032
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 928572
