--- a/data/cards/11460577.yaml
+++ b/data/cards/11460577.yaml
@@ -45,10 +45,10 @@ series:
 images:
 - index: 1
   image: '  EtoileCyber-EE04-JP-C.jpg'
-  illustration: '   EtoileCyber-TF04-JP-VG.jpg'
+  illustration: '   EtoileCyber-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: EtoileCyber-SGX1-EN-C-1E.png
-  illustration: EtoileCyber-TF04-EN-VG.jpg
+  illustration: EtoileCyber-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: EEN-EN016
