--- a/data/cards/47737087.yaml
+++ b/data/cards/47737087.yaml
@@ -55,10 +55,10 @@ series:
 images:
 - index: 1
   image: '  ElementalHERORampartBlaster-EE04-JP-R.jpg'
-  illustration: '   ElementalHERORampartBlaster-TF04-JP-VG.jpg'
+  illustration: '   ElementalHERORampartBlaster-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: ElementalHERORampartBlaster-SGX1-EN-C-1E.png
-  illustration: ElementalHERORampartBlaster-TF04-EN-VG.jpg
+  illustration: ElementalHERORampartBlaster-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: EEN-EN033
