--- a/data/cards/40516623.yaml
+++ b/data/cards/40516623.yaml
@@ -8,7 +8,7 @@ name:
   it: Spirito Sumo Yoko-Zuna
   pt: Espírito do Sumô Yoko-Zuna
   ja: スモウ<ruby>魂<rt>スピリット</rt></ruby> <ruby>ＹＯＫＯ－ＺＵＮＡ<rt>ヨコヅナ</rt></ruby>
-  ja_romaji: Sumō Supiritto Yokozuna
+  ja_romaji: Sumou Supiritto Yokozuna
   ko: 스모 스피릿 <ruby>YOKO－ZUNA<rt>요코즈나</rt></ruby>
   ko_rr: Seumo Seupirit Yoko Jeuna
   zh-TW:
