--- a/data/rush/17301.yaml
+++ b/data/rush/17301.yaml
@@ -1,6 +1,6 @@
 konami_id: 17301
 name:
-  en: Zapzap Octospark
+  en: Zap Zap Octospark
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 1600
 def: 800
 images:
 - index: 1
-  image: ZapzapOctospark-RDKP08-JP-C.png
+  image: ZapZapOctospark-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP025
