--- a/data/rush/17317.yaml
+++ b/data/rush/17317.yaml
@@ -1,6 +1,6 @@
 konami_id: 17317
 name:
-  en: Showering Infergyo
+  en: Showering Seaferno
   de:
   es:
   fr:
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Zapzap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. Then, if your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
+    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. Then, if your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2800
 def: 2400
 materials:
   en: |-
-    "Zapzap Octospark" + "Jellyplug"
+    "Zap Zap Octospark" + "Pluggyfish"
   de:
   es:
   fr:
@@ -62,7 +62,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: ShoweringInfergyo-RDKP08-JP-C.png
+  image: ShoweringSeaferno-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP041
