--- a/rush.yaml
+++ b/rush.yaml
@@ -89588,3 +89588,54 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 930467
+---
+konami_id:
+name:
+  en: Dark Nebula
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダーク・ネビュラ
+  ja_romaji: Dāku Nebyura
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your DARK Attribute Galaxy Type monster with 1500 or more ATK is destroyed by an opponent's attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 DARK Attribute Galaxy Type monster from your Graveyard to your field in face-up Attack Position. The monster Special Summoned by this effect loses 500 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: DarkNebula-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP059
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 930503
