--- a/rush.yaml
+++ b/rush.yaml
@@ -89639,3 +89639,300 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 930503
+---
+konami_id:
+name:
+  en: Voidvelgr Protostar
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ヴォイドヴェルグ・プロトスター
+  ja_romaji: Voidoverugu Purotosutā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 4 or lower Galaxy Type monster from your Graveyard to your hand. Then, if you have "Dark Hole" in your Graveyard, you can Special Summon 1 Level 8 monster from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: DARK
+level: 9
+atk: 2400
+def: 2800
+materials:
+  en: |-
+    "Voidvelgr Globule" + "Dark Prophet"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Voidvelgr
+images:
+- index: 1
+  image: VoidvelgrProtostar-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP033
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 930505
+---
+konami_id:
+name:
+  en: Red Riser
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: レッド・ライザー
+  ja_romaji: Reddo Raizā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 "Chemicalizer Red" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Effect
+attribute: FIRE
+level: 1
+atk: 300
+def: 300
+series:
+- Chemistry
+images:
+- index: 1
+  image: RedRiser-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP007
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 930507
+---
+konami_id:
+name:
+  en: Buffered Slime
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: バッファード・スライム
+  ja_romaji: Baffādo Suraimu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's Level 8 or lower monster declares an attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. This turn, you take no battle damage. Also, if your LP are 3000 or more, take 2000 damage.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: BufferedSlime-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP064
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 930509
+---
+konami_id:
+name:
+  en: Excutie Flame
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: エクスキューティー・フラーメ
+  ja_romaji: Ekusukyūtī Furāme
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    If your opponent has a face-up Level 6 or higher monster on their field, you can Special Summon this card from your hand face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains ATK equal to [the number of face-up Level 6 or higher monsters on the field] x 600 until the end of this turn. This turn, you can only attack with this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Pyro / Effect
+attribute: FIRE
+level: 6
+atk: 1700
+def: 500
+series:
+- Excutie
+images:
+- index: 1
+  image: ExcutieFlame-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP019
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 930511
+---
+konami_id:
+name:
+  en: Ring of Storms
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>暴<rt>ぼう</rt></ruby><ruby>風<rt>ふう</rt></ruby><ruby>輪<rt>りん</rt></ruby>
+  ja_romaji: Bōfūrin
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 2-7 monsters with different names from your opponent's Graveyard into their Deck. Then, if you shuffled 6 or more monsters by this effect, you can shuffle 1 face-up Level 8 or lower monster from your opponent's field into the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: RingofStorms-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP055
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 930513
