--- a/data/cards/80811661.yaml
+++ b/data/cards/80811661.yaml
@@ -82,6 +82,9 @@ sets:
     set_name: Duelist Legacy Volume.1
     rarities:
     - Common
+  - set_number: DBWS-JP042
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
   ko:
   - set_number: SRL-K063
     set_name: Spell Ruler
