--- a/rush.yaml
+++ b/rush.yaml
@@ -10644,7 +10644,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    All face-up Pyro Type monsters on your field gain ATK equal to [the number of Normal Monsters in the Graveyards] x 100 until the end of this turn.
+    All face-up Pyro Type monsters on your field gain ATK equal to [the number of Normal Monsters in both players' Graveyards] x 100 until the end of this turn.
   de:
   es:
   fr:
