--- a/data/cards/02810642.yaml
+++ b/data/cards/02810642.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임기어 <ruby>β<rt>베타</rt></ruby>
   ko_rr:
   zh-TW:
-  zh-CN: PSY骨架装备·β
+  zh-CN: 精神骨架装备 贝塔
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by a card effect, and cannot be Special Summoned by other ways. When an opponent's monster declares an attack while you control no monsters: You can Special Summon both this card from your hand and 1 "PSY-Frame Driver" from your hand, Deck, or Graveyard, and if you do, destroy the attacking monster, then end the Battle Phase. During the End Phase, banish the face-up monsters Special Summoned by this effect.
@@ -32,7 +32,7 @@ text:
     이 카드는 통상 소환할 수 없고, 카드의 효과로만 특수 소환할 수 있다. ① : 자신 필드에 몬스터가 존재하지 않고, 상대 몬스터의 공격 선언시에 발동할 수 있다. 패의 이 카드와 자신의 패 / 덱 / 묘지의 "PSY(싸이)프레임 드라이버" 1장을 고르고 특수 소환하여, 그 공격 몬스터를 파괴한다. 그 후, 배틀 페이즈를 종료한다. 이 효과로 특수 소환한 몬스터는 전부 엔드 페이즈에 제외된다.
   zh-TW:
   zh-CN: |-
-    这张卡不能通常召唤，用卡的效果才能特殊召唤。①：自己场上没有怪兽存在，对方怪兽的攻击宣言时才能发动。选手卡的这张卡和自己的手卡·卡组·墓地1只「PSY骨架驱动者」特殊召唤，那只攻击怪兽破坏。那之后，战斗阶段结束。这个效果特殊召唤的怪兽全部在结束阶段除外。
+    此卡不可通常召唤，仅可以卡的效果特殊召唤。①：自己场上不存在怪兽，对手怪兽攻击宣言时可以发动。挑选自己手牌・牌组・墓地的１只“精神骨架 驱动者”，和手牌的此卡一起特殊召唤，破坏该攻击怪兽。然后结束战斗阶段。以此效果特殊召唤的怪兽将全部在结束阶段被除外。
 card_type: Monster
 monster_type_line: Psychic / Tuner / Effect
 attribute: LIGHT
@@ -83,6 +83,11 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  zh-CN:
+  - set_number: CL02-SC121
+    set_name: Classic Pack 02
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
